--- a/styles/index.css
+++ b/styles/index.css
@@ -92,7 +92,7 @@
     height: 600px;
     margin: 0 auto;
     margin-top: 0;
-    margin-bottom: 80px;
+    /* margin-bottom: 80px; */
     padding: 80px 120px;
     background-color: antiquewhite;
     background-image: url('../images/shape/7.png');
@@ -140,10 +140,99 @@
     margin-bottom: 100px;
 }
 
+/* section-2-style */
+.section-2 {
+    margin: 0 auto;
+    width: 1707px;
+    height: 800px;
+    margin-bottom: 80px;
+    padding: 80px 120px;
+}
+
+.section-2-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.section-2-title {
+    color: rgb(103, 103, 103);
+    font-family: Montserrat;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 44px;
+    letter-spacing: 0%;
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 30px;
+}
+
+.section-2-description {
+    width: 706px;
+    height: 69px;
+    margin-top: 0;
+    color: rgb(37, 37, 37);
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 38px;
+}
+
+.card-container {
+    margin-top: 0;
+    display: flex;
+    gap: 20px;
+    margin-bottom: 0;
+}
+
+.cards {
+    width: 50%;
+    height: 562px;
+    border-radius: 30px;
+    box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.15);
+    background: rgb(255, 255, 255);
+    padding: 25px;
+}
+
+.card-image {
+    width: 550px;
+    height: 308px;
+}
+
+.card-title {
+    margin-top: 30px;
+    color: rgb(24, 25, 31);
+    font-family: Montserrat;
+    font-size: 28px;
+    font-weight: 800;
+    line-height: 40px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.card-description {
+    margin-top: 0;
+    width: 534px;
+    height: 90px;
+    color: rgb(24, 25, 31);
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: 0%;
+    text-align: left;
+}
 
 
 @media screen and (max-width: 576px) {
-    .header-container, .section-1-container {
+
+    .header-container,
+    .section-1-container {
         flex-direction: column;
         gap: 40px;
         padding: 0;
@@ -158,7 +247,9 @@
         gap: 0;
     }
 
-    .header, .section-1 {
+    .header,
+    .section-1,
+    .section-2 {
 
         height: auto;
         width: auto;
@@ -168,13 +259,16 @@
         width: 179px;
     }
 
-    .header-title, .section-1-title {
+    .header-title,
+    .section-1-title {
         font-size: 30px;
         line-height: normal;
         margin-bottom: 10px;
     }
 
-    .header-subtitle, .section-1-description {
+    .header-subtitle,
+    .section-1-description,
+    .section-2-description {
         width: 179px;
         height: 234px;
         margin-bottom: 3px;
@@ -185,42 +279,73 @@
         height: 234px;
 
     }
-    header .orange-btn
-    {
+
+    header .orange-btn {
         margin: 0;
         height: 60px;
         width: 140px;
         padding: 8px 14px;
     }
+
     .image-col {
         width: 50px;
         font-size: 9px;
 
     }
-    .section-1
-    {
+
+    .section-1 {
         background: rgba(252, 143, 73, 0.1);
     }
-    .section-1-image
-    {
+
+    .section-1-image {
         width: 179px;
         height: 234px;
         margin-left: -40px;
     }
-    .section-1-title, .section-1-description
-    {
+
+    .section-1-title,
+    .section-1-description {
         margin-left: -50px;
     }
-    .section-1-description
-    {
-        margin-bottom: 170px;
+
+    .section-1-description {
+        margin-bottom: 190px;
     }
-    .section-1 .orange-btn
-    {
+
+    .section-1 .orange-btn {
         margin-left: -60px;
         height: 60px;
         width: 140px;
         padding: 8px 14px;
         margin-top: 20px;
+    }
+
+    .section-2-description {
+        line-height: 22px;
+        letter-spacing: 0%;
+        text-align: center;
+        color: rgb(37, 37, 37);
+    }
+    .card-container
+    {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .cards
+    {
+        width: 290px;
+        padding: 25px;
+        margin-left: -10px;
+    }
+    .card-image
+    {
+        width: 300px;
+        height: 234px;
+    }
+    .card-description 
+    {
+        height: auto;
+        width: auto;
     }
 }
